Fix text alignment in welcomse story button

--- a/demos/storybook/src/welcome/welcome.component.css
+++ b/demos/storybook/src/welcome/welcome.component.css
@@ -26,17 +26,6 @@
     width: 24px;
 }
 
-.buttons {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 36px;
-}
-
-.buttons .link {
-    min-width: 100px;
-    font-weight: 600;
-}
-
 .description {
     max-width: 900px;
     padding: 20px;
